# Cmamba_reconstruct

./: .gitignore  CMamba_ZCU102_Port_Plan.md  Hardware_Refactor_Scaffold.md  LICENSE  Project_Refactor_For_Hardware.md  README.md  Workflow_Train_Test_Eval.md  ZCU102_bak.md  ablation_log.md  calibrate_last.pt  command  data.bat  dataformat.csv  eval.bat  instruction.md  plot.bat  profile.html  profile.json  ref_data.bat  ref_eval.bat  ref_export.bat  ref_test.bat  ref_train.bat  refactor_last.pt  temp_view.txt  test.bat  train.bat  train_log.csv  update_log.txt  vectors.bat  ~$pre-ssm.pptx
CPP/: CMakeLists.txt  README.md
CPP/src/: infer.cpp  infer.hpp  io.hpp  main.cpp  quant_fixed88.hpp
CPP/tools/: README.md  export_fixed88.bat  export_fixed88.py  make_input_from_features.bat  make_input_from_features.py
HW_reconstruct/: top_mac_plus_bias_fifo_sigmoid_ew.sv
Hardware/: mac_mem_controller_combined.sv  mac_mem_controller_combined_dp.sv  pe_unit_pipe.sv  pipeline_4array_top.sv  pipeline_4array_with_reduction.sv  reduction_accumulator.sv  slim_mac_mem_controller_combined_dp.sv  slim_multi_bank_wbuf_dp.sv  xt_input_buf.sv
docx/: ablation_architectures.md  environment.md  eval.md  eval_chs.md  hardware_contract.md  mambaslim.md  mambaslim_chs.md  test.md  train.md  train_chs.md
export_logo_2100/: backbone.json  block0_dt_proj_B.npy  block0_dt_proj_W.npy  block0_dw_B.npy  block0_dw_W.npy  block0_norm_weight.npy  block1_dt_proj_B.npy  block1_dt_proj_W.npy  block1_dw_B.npy  block1_dw_W.npy  block1_norm_weight.npy  block2_dt_proj_B.npy  block2_dt_proj_W.npy  export.json  (+13 more)
(+2145 files in other folders)
